This file documents the revision history for mod_gearman.

0.1    Mon Aug 23 15:01:15 CEST 2010
          - initial version